<resources>
    <string name="app_name">Assignment_6</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Contact Number</string>
    <string name="Address">Address</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="DOB">DOB</string>
    <string name="Country">Country</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Reading">Reading</string>
    <string name="Chess">Chess</string>
    <string name="Drawing">Drawing</string>
    <string name="Sign_In">Sign_In</string>
    <string name="Enter_Name">Enter name</string>
    <string name="Enter_Email">Enter email</string>
    <string name="select_date">Select date</string>
    <string name="Enter_address">Enter address</string>
    <string name="Enter_Contact_Number">Enter contact number</string>
    <string name="select_at_least_one_hobby">Select at least one hobby</string>
    <string name="Sign_In_SuccessFully">Sign in successFully</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="Pattern">^(([\\w-]+\\.)+[\\w-]+|([a-zA-Z]{1}|[\\w-]{2,}))@"
                        +"((([0-1]?[0-9]{1,2}|25[0-5]|2[0-4][0-9])\\.([0-1]?"
                        +"[0-9]{1,2}|25[0-5]|2[0-4][0-9])\\."
                        +"([0-1]?[0-9]{1,2}|25[0-5]|2[0-4][0-9])\\.([0-1]?"
                        +"[0-9]{1,2}|25[0-5]|2[0-4][0-9])){1}|"
                        +"([a-zA-Z]+[\\w-]+\\.)+[a-zA-Z]{2,4})$</string>


    <string-array name="countryArray">
        <item >India</item>
        <item>China</item>
        <item>America</item>
        <item>Russia</item>
        <item >Uk</item>
        <item>Germany</item>
    </string-array>

</resources>